SET(CMAKE_INCLUDE_CURRENT_DIR ON)

INCLUDE_DIRECTORIES(SYSTEM
    ${Boost_INCLUDE_DIRS}
    ${PROJECT_SOURCE_DIR}/contrib
)
INCLUDE_DIRECTORIES(
    ${PROJECT_SOURCE_DIR}
    .
)

ADD_EXECUTABLE(basic_write basic_write.cpp)
TARGET_LINK_LIBRARIES(basic_write cornelich ${CMAKE_THREAD_LIBS_INIT} ${Boost_LIBRARIES})


ADD_EXECUTABLE(basic_read basic_read.cpp)
TARGET_LINK_LIBRARIES(basic_read cornelich ${CMAKE_THREAD_LIBS_INIT} ${Boost_LIBRARIES})


ADD_EXECUTABLE(pong pong.cpp)
TARGET_LINK_LIBRARIES(pong cornelich ${CMAKE_THREAD_LIBS_INIT} ${Boost_LIBRARIES})


ADD_EXECUTABLE(ping ping.cpp)
TARGET_LINK_LIBRARIES(ping cornelich ${CMAKE_THREAD_LIBS_INIT} ${Boost_LIBRARIES})
